# Synthesizer-for-CS-110C-Honors

./: CMakeLists.txt  HonorsProject110C.drawio  README.md  gmon.out  imgui.ini  notes.md
src/: IBaseOscillators.h  Module.h  Oscillator4.h  Port.cpp  Port.h  SmoothOscillator.h  Synth.h  SynthEngine.cpp  filter.cpp  filter.h  main  main.cpp  maintest  module.cpp  module.h  oscillator4.cpp  oscillator4.h  smoothOscillator.h  synth.h  utility.cpp  utility.h  vena_utility.h
testing/: SynthEngine.cpp  maintest.cpp  old_main.cpp
